# alphagen

./: .gitignore  README.md  returns.csv  setup.cfg  setup.py  uscal.csv  uscal.py  uscal.txt
alphagen/: cli.py
alphagen/calendar/: us.txt
alphagen/nets/: linear_regression.py  nets.py  nets_torch.py  torch_regression2.py  torchtest.py  torchtut.py
alphagen/pca/: gen_data.py  pca.ipynb  pca_example.py  returns.py
alphagen/utils/: test.py  trading_cal.py  use_xarray.py  yahoo_fundamental.py  yahoo_pricevolume.py
