[metadata]
name = alphagen
version = 0.1.0
author = Sophie Li
author_email = sophie.qx.li@gmail.com
description = A package for alpha research and generation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
#install_requires =
#    # Add your dependencies here, e.g. requests

#[options.packages.find]
#where = .

[options.entry_points]
console_scripts =
    acli = alphagen.cli:main
